@@ -37,6 +37,8 @@ Current git version
   * The 'cycle' command now also cycles through floating windows.
   * The 'rule' command now reports errors already during rule creation.
   * In rule consequences, 'toggle' is not allowed anymore.
+  * New rule consequences:
+    - 'floating_geometry' for setting the attribute of the same name
   * The python bindings automatically convert from and to python's types
   * Bug fixes:
     - Fix mistakenly transparent borders of argb clients
